[Sensors] Fix error type and message used

Before this change Sensor implementation used 'UnknownError' exception type (and the default message) to report errors from mojo proxies.
This led to the weird error messages like: "SensorErrorEvent {error: DOMException: An unknown error occurred within Indexed Database.,".

This patch uses 'NotReadableError' as described in the specification [1] and also simplifies the error handling code.

BUG=692559

[1] https://w3c.github.io/sensors

Review-Url: https://codereview.chromium.org/2699673002
Cr-Commit-Position: refs/heads/master@{#450741}

Former-commit-id: 064a292ce35b28592529c5bded26f905d65833a9